@@ -14,6 +14,7 @@ class User < ActiveRecord::Base
 
   EMAILABLES = [ [:sticky_creation, 'Receive email when a new sticky is created'],
                  [:sticky_completion, 'Receive email when a sticky is marked as completed'],
+                 [:sticky_due_time_changed, 'Receive email when a sticky\'s due date time is changed'],
                  [:project_comments, 'Receive email when a comment is added to a project'],
                  [:sticky_comments, 'Receive email when a comment is added to a sticky'],
                  [:daily_stickies_due, 'Receive daily weekday emails if there are stickies due or past due'] ]
