@@ -3,7 +3,9 @@
   <tr>
     <td style="padding-top:10px;padding-left:10px;vertical-align:top"><% if @sticky.owner %>Assigned to:<br /><b><%= @sticky.owner.name %></b><% end %></td>
     <td style="padding-top:10px;padding-left:20px;padding-right: 20px; text-align:center;vertical-align:top"><%= link_to @sticky.name, "#{SITE_URL}/stickies/#{@sticky.id}" %><% if @sticky.completed? %><br /><span style="color:#366DC2;font-weight:bold">completed</span><% end %></td>
-    <td style="padding-top:10px;padding-right:10px;text-align:right;vertical-align:top"><% if @sticky.due_date %>Due Date:<br /><b><%= simple_date_and_weekday(@sticky.due_date) %></b><% end %></td>
+    <td style="padding-top:10px;padding-right:10px;text-align:right;vertical-align:top">
+      <% if @sticky.due_date %>Due Date:<br /><b><%= simple_date_and_weekday(@sticky.due_date) %></b><% end %><% unless @sticky.due_at.blank? %><br /><b><%= @sticky.due_at_range %></b><% end %>
+    </td>
   </tr>
   <tr>
     <td colspan="3" style="padding:20px">
@@ -12,7 +14,7 @@
   </tr>
   <tr>
     <td colspan="3" style="padding:0px 10px 10px 10px">
-      <% if @sticky.tags.size > 0 %>Tags: <b><%= @sticky.tags.collect{|t| "<span style='background-color: #{t.color}'>"+t.name+"</span>"}.join(', ').html_safe %></b><% end %>
+      <% if @sticky.tags.size > 0 %>Tags: <b><%= @sticky.tags.collect{|t| "<span style='border:1px solid #bbb;background-color: #{t.color}'>"+t.name+"</span>"}.join(', ').html_safe %></b><% end %>
     </td>
   </tr>
 </table>
