@@ -1,6 +1,6 @@
 Hello <%= @recipient.first_name %>,<br />
 <br />
-<%= @sticky.user.name %> added the following Sticky <%= link_to @sticky.name, "#{SITE_URL}/stickies/#{@sticky.id}" %> to Project <%= link_to @sticky.project.name, "#{SITE_URL}/projects/#{@sticky.project.id}" %>.<br />
+<%= @sticky.user.name %> <span style="border:1px solid #00ba25;background-color:#a6ffb8">ADDED</span> the following Sticky <%= link_to @sticky.name, "#{SITE_URL}/stickies/#{@sticky.id}" %> to Project <%= link_to @sticky.project.name, "#{SITE_URL}/projects/#{@sticky.project.id}" %>.<br />
 
 <%= render partial: 'sticky_note' %>
 
